# live_notion_discord

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WEBHOOK_CENTRIC_IMPLEMENTATION.md  main.py  pyproject.toml  requirements.txt  test_notification.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
application/dto/: stream_state_dto.py
application/services/: stream_change_detector.py
application/use_cases/: monitor_streams_use_case.py
config/: .env.example  config.json.example  settings.py
docs/images/: README.md
domain/entities/: channel.py  stream.py
domain/repositories/: notification_gateway.py  state_repository.py  stream_repository.py
domain/value_objects/: channel_id.py  stream_status.py  webhook_config.py
infrastructure/discord/: discord_notification_gateway.py
infrastructure/logging/: logger_config.py
infrastructure/persistence/: json_state_repository.py
infrastructure/youtube/: youtube_stream_repository.py
presentation/cli/: monitor_controller.py
tests/integration/: test_discord_notification_multiple_webhooks.py  test_youtube_stream_repository.py
tests/unit/: test_entities.py  test_monitor_controller_shutdown.py  test_monitor_controller_timing.py  test_settings_migration.py  test_settings_webhook_centric.py  test_stream_change_detector.py  test_webhook_config.py
